# tx-xrpl-token-migrator

./: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
contract/: Cargo.toml  embed.go
contract/src/: contract.rs  error.rs  msg.rs  state.rs
integration-tests/: bnb_integration_test.go  bsc_integration_test.go  contract_test.go  coreum.go  init.go  integration_test.go  migration_test.go  testnet_bride_test.go  testnet_bridge_test.go  tx.go  xrpl.go
integration-tests/bsc/: bsc.go  bsc_integration_test.go  init.go
integration-tests/bsc/evm/: anvil.go  bridge.go  deploy.go
integration-tests/evm/: anvil.go  bridge.go  deploy.go
integration-tests/xrpl/: contract_test.go  init.go  integration_test.go  migration_test.go  xrpl.go
monitoring/: docker-compose.yml
monitoring/grafana/: datasource.yml
monitoring/grafana/dashboards/: bridge.json
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/alerts/: alert.rules
relayer/audit/: audit.go
relayer/client/bnb/: scanner.go
relayer/client/bsc/: scanner.go
relayer/client/coreum/: chain.go  contract.go
relayer/client/http/: http.go
relayer/client/tx/: chain.go  contract.go
relayer/cmd/: main.go
relayer/executor/: executor.go
relayer/finder/: bnb_finder.go  bnb_finder_test.go  bsc_finder.go  bsc_finder_test.go  finder.go  finder_test.go
relayer/logger/: zap.go
relayer/metric/: coreum.go  pusher.go  recorder.go  server.go  tx.go
relayer/service/: service.go
relayer/watcher/: config.go  watcher.go
(+15 files in other folders)
