[package]
name = "threshold-bank-send"
version = "0.2.0"
authors = ["Tokenize-X"]
edition = "2021"

exclude = [
    "threshold_bank_send.wasm",
    "checksums.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = "1.2.5"
cosmwasm-storage = "1.2.5"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
cw2 = "1.0.1"
schemars = "0.8.8"
cosmwasm-schema = "1.2.6"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.40" }

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
